fixed node list wrap issue.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -434,7 +434,8 @@ li div input {
 }
 
 .package-title {
-  width: 120%;
+  white-space: nowrap;
+  display: inline-block;
 }
 
 .package-name {
